# xeus

./: .appveyor.yml  .dockerignore  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  README.md  TestWasmDockerfile  build.sh  environment-dev.yml  package-lock.json  xeusConfig.cmake.in
.azure-pipelines/: azure-pipelines-linux.yml  azure-pipelines-osx.yml
.github/workflows/: main.yml
cmake/: XeusEmscriptenWasmFlags.cmake  XeusTestEmscriptenWasmFlags.cmake
include/xeus/: xauthentication.hpp  xcontrol_messenger.hpp  xdap_tcp_client.hpp  xdebugger.hpp  xdebugger_base.hpp  xembind.hpp  xems_interpreter.hpp  xemscripten_zmq.hpp  xinterpreter.hpp  xmessage.hpp  xmiddleware.hpp  xserver.hpp  xserver_emscripten.hpp  xwrap_zmq.hpp  xwrap_zmq_addon.hpp
include/xeus/wasm/: zmq.hpp
src/: xcontrol.cpp  xcontrol.hpp  xcontrol_messenger.cpp  xdap_tcp_client.cpp  xembind.cpp  xheartbeat.cpp  xheartbeat.hpp  xinterpreter.cpp  xkernel.cpp  xkernel_core.cpp  xmessage.cpp  xmiddleware.cpp  xserver_control_main.cpp  xserver_emscripten.cpp  xserver_shell_main.cpp  xserver_zmq.cpp  xserver_zmq_split.cpp  xshell.hpp  xzmq_messenger.hpp
test/: CMakeLists.txt  just_test_emscripten.sh  test_emscripten.sh  test_interpreter.cpp  test_wasm.js
test_wasm/: CMakeLists.txt  fobar.cpp  main_shell.cpp  test_interpreter.cpp  test_interpreter.hpp
wasm/: CMakeLists.txt  simple.html  test_interpreter.cpp  xeus_dummy.cpp  xeus_dummy_kernel.cpp  xeus_server_dummy.cpp
